--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies{
 
     implementation("net.dv8tion:JDA:5.0.0-alpha.10")
     implementation "org.jsoup:jsoup:1.7.2"
-    implementation "com.github.Anuken.MindustryJitpack:core:5b7f751073"
+    //implementation "com.github.Anuken.MindustryJitpack:core:5b7f751073"
     implementation "com.github.Anuken.Arc:arc-core:dfcb21ce56"
     implementation "org.slf4j:slf4j-nop:1.7.31"
 }
