--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ tasks.register('dist', Jar) {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 dependencies{
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    implementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     implementation("net.dv8tion:JDA:5.0.0-alpha.10")
     implementation "org.jsoup:jsoup:1.7.2"
     //implementation "com.github.Anuken.MindustryJitpack:core:5b7f751073"
